Fix mobile menu z-index

--- a/css/app.css
+++ b/css/app.css
@@ -437,7 +437,7 @@ input:not([type]), input[type="text"], input[type="password"], input[type="date"
 	top:-3.75rem;
 	left: 0;
 	right: 0;
-	z-index:999;
+	z-index:9999;
 	transition:0.2s top cubic-bezier(.3, .73, .3, .74);
 }
 body.down .top-nav.fixed {
